--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist && echo \"\n\n✅  Déploiement terminé avec succès !\n Votre site est visible ici : https://xav1312.github.io/Portfolio/\""
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
